--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name=".database.MyApp"
         android:supportsRtl="true"
         android:theme="@style/Theme.JobTracker"
         tools:targetApi="31">
         <activity
             android:name=".NewDataActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ScreenForData"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
