--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.JobTracker"
         tools:targetApi="31" >
         <activity
-            android:name=".GetDataForMonthActivity"
+            android:name=".GetDataForDayActivity"
             android:exported="false" />
         <activity
             android:name=".GetDataActivity"
