--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.JobTracker"
         tools:targetApi="31">
         <activity
+            android:name=".GetDataForMonth"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".EditTodayData"
             android:exported="false" />
         <activity
