--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Base.Theme.JobTracker"
         tools:targetApi="31">
         <activity
+            android:name=".AdditionalWayActivity"
+            android:exported="false" />
+        <activity
             android:name=".NewGasActivity"
             android:exported="false" />
         <activity
